# ustc_cg25

Framework2D/: .clang-uml  CMakeCache.txt  CMakeLists.txt  HW1 Report.md
Framework2D/Report/: HW2 Report.md  HW3 Report.md  README.md
Framework2D/diagrams/: 1_MiniDraw.puml  2_ImageWarping.puml
Framework2D/include/common/: Log.h  image.h  image_widget.h  window.h
Framework2D/src/assignments/: CMakeLists.txt
Framework2D/src/assignments/1_MiniDraw/: canvas_widget.cpp  canvas_widget.h  minidraw_window.cpp
Framework2D/src/assignments/1_MiniDraw/shapes/: ellipse.cpp  ellipse.h  freehand.cpp  freehand.h  polygon.cpp  polygon.h  shape.h
Framework2D/src/assignments/1_MiniDraw_Ex/: CMakeLists.txt  Ex_hello_world.cpp  ex_canvas_widget.h  ex_window_mini_draw.h
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  warping_widget.cpp  warping_widget.h
Framework2D/src/assignments/2_ImageWarping/warper/: IDW_warper.cpp  NN_warper.cpp  NN_warper.h  RBF_warper.cpp  RBF_warper.h  warper.h
Framework2D/src/assignments/3_PoissonImageEditing/: CMakeLists.txt  poisson_window.cpp  source_image_widget.cpp  source_image_widget.h  target_image_widget.cpp  target_image_widget.h
Framework2D/src/assignments/3_PoissonImageEditing/CloneMethods/: Mixgradient.cpp  Mixgradient.h  Seamless.cpp  Seamless.h  clonemethod.h
Framework2D/src/assignments/3_PoissonImageEditing/shapes/: freehand.cpp  freehand.h  shape.h
Framework2D/src/common/: CMakeLists.txt
Framework3D/submissions/: .gitignore  CMakeLists.txt  stage.usdc
Framework3D/submissions/assignments/nodes/: node_mass_spring.cpp
Framework3D/submissions/assignments/utils/: CMakeLists.txt
Framework3D/submissions/chenyitong_homework/: render_nodes_save.json  stage.usdc
Framework3D/submissions/chenyitong_homework/config/: file_paths.h
Framework3D/submissions/chenyitong_homework/nodes/: node_boundary_mapping.cpp  node_cotangent_weights.cpp  node_mesh_editing.cpp  node_min_surf.cpp
Framework3D/submissions/chenyitong_homework/nodes_render/: node_render_deferred_lighting_gl.cpp  node_render_shadow_mapping_gl.cpp
Framework3D/submissions/chenyitong_homework/nodes_render/shaders/: blinn_phong.fs  pcss.fs  rasterize_impl.fs  ssao.fs
Homeworks/: README.md
Homeworks/0_cpp_warmup/documents/1_BasicDArray/C2Cpp/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/include/: PolynomialList.cpp
Homeworks/0_cpp_warmup/project/src/executables/1_BasicDArray/: DArray.cpp
Homeworks/0_cpp_warmup/project/src/executables/2_EfficientDArray/: DArray.cpp
Homeworks/0_cpp_warmup/project/src/executables/3_TemplateDArray/: CMakeLists.txt  DArray.h  DArray.inl
Homeworks/0_cpp_warmup/project/src/executables/4_list_Polynomial/: main.cpp
Homeworks/0_cpp_warmup/project/src/libraries/shared/: PolynomialList.cpp
Homeworks/0_cpp_warmup/project/src/libraries/static/: PolynomialMap.cpp
Homeworks/0_cpp_warmup/samples/src/executables/3_TemplateDArray/: DArray.inl
Homeworks/7_path_tracing/: README.md
Homeworks/8_mass_spring/: README.md
Homeworks/8_mass_spring/documents/: README.md
